argocd/core/cert-manager/nginx-proxy-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy-manager
  namespace: cert-manager
  labels:
    app: nginx-proxy-manager
spec:
  selector:
    matchLabels:
      app: nginx-proxy-manager
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-proxy-manager
    spec:
      containers:
      - name: nginx-proxy-manager
        image: jc21/nginx-proxy-manager:github-pr-4021
        ports:
        - containerPort: 80
        - containerPort: 81
        - containerPort: 443
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /etc/letsencrypt
          name: letsencrypt
        resources:  {}
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: nginx-proxy-manager-data
      - name: letsencrypt
        persistentVolumeClaim:
          claimName: nginx-proxy-manager-letsencrypt
