argocd/core/cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-proxy-manager
  namespace: cert-manager
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - nginx-proxy-manager.legion.lan
  rules:
  - host: nginx-proxy-manager.legion.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mgmt
            port:
              number: 81
